# DME

./: 29222-j10.doc  29571-j10.docx
KSCommonServer/: setup.py
KSCommonServer/.openapi-generator/: FILES
KSCommonServer/openapi_server/: __main__.py
KSfastapi/: openapi.yaml  setup.cfg
KSfastapi/.openapi-generator/: FILES
KSfastapi/src/openapi_server/: main.py
KSfastapi/src/openapi_server/models/: problem_details.py
KSregfastapi/: README.md  openapi.yaml  setup.cfg
KSregfastapi/.openapi-generator/: FILES
KSregfastapi/src/openapi_server/: main.py
KSregfastapi/src/openapi_server/apis/: individual_registered_dme_type_production_capability_api.py  individual_registered_dme_type_production_capability_api_base.py  registered_dme_type_production_capabilities_api.py  registered_dme_type_production_capabilities_api_base.py
KSregfastapi/src/openapi_server/models/: data_delivery_mechanism.py  data_delivery_mode.py  delivery_schema.py  dme_type_definition.py  dme_type_id_struct.py  dme_type_related_capabilities.py  interface_description.py  kafka_delivery_configuration.py  metadata.py  o_auth_grant_type.py  problem_details.py  schema_types.py  security_method.py
KSregfastapi/tests/: test_individual_registered_dme_type_production_capability_api.py  test_registered_dme_type_production_capabilities_api.py
KSregflask/: README.md  setup.py
OLD/: README.md  pyproject.toml  setup.py
YAML/: O-RAN.WG2.R1AP_Bootstrap.yaml  O-RAN.WG2.R1AP_DataAccess.yaml  O-RAN.WG2.R1AP_DataDiscovery.yaml  O-RAN.WG2.R1AP_DataOffer.yaml  O-RAN.WG2.R1AP_DataRegistration.yaml
(+59 files in other folders)
