[metadata]
name = openapi_server
version = 1.0.0
description = R1 Common definitions - O-RAN.WG2.R1AP_Common.yaml. © 2024, O-RAN ALLIANCE. All rights reserved. 
long_description = file: README.md
keywords = OpenAPI R1 Common definitions
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
