[metadata]
name = openapi_server
version = 2.0.0-alpha.1
description = API for Data registration service. © 2024, O-RAN ALLIANCE. All rights reserved. 
long_description = file: README.md
keywords = OpenAPI Data registration service
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
